force-app/main/default/objects/Invoice_Template__c/fields/Automated_Billing__c.field-meta.xml
<CustomField>
    <fullName>Automated_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Billing</label>
    <type>Checkbox</type>
</CustomField>