force-app/main/default/objects/Invoice_Template__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Invoice Templates</relationshipLabel>
    <relationshipName>Invoice_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>