force-app/main/default/objects/Invoice_Template__c/fields/Fees_Calculation_model__c.field-meta.xml
<CustomField>
    <fullName>Fees_Calculation_model__c</fullName>
    <label>Fees Calculation model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pricing_Model__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Included Fees</fullName>
            </value>
            <value>
                <fullName>On Top Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>