force-app/main/default/objects/Invoice_Template__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Data</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>SE Integrations</fullName>
            </value>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>Pixel Apps</fullName>
            </value>
            <value>
                <fullName>Creative service</fullName>
            </value>
            <value>
                <fullName>Minimum Fee</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
            <value>
                <fullName>RTB Own Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>