force-app/main/default/objects/Invoice_Template__c/fields/Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details__c</fullName>
    <label>Invoice Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Level__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Minimal (agency level)</fullName>
            </value>
            <value>
                <fullName>Medium (end client level)</fullName>
            </value>
            <value>
                <fullName>Maximum (campaign level)</fullName>
                <default>true</default>
                <label>Maximum (campaign level)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>