force-app/main/default/objects/Invoice_Template__c/fields/Invoice_Level__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Level__c</fullName>
    <label>Invoice Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
                <default>true</default>
                <label>Agency</label>
            </value>
            <value>
                <fullName>End Client</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>