force-app/main/default/objects/Invoice_Template__c/fields/Is_Payment_Terms_Higher__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Terms_Higher__c</fullName>
    <formula>AND(NOT(ISNULL(Payment_Term__c)), Contract__r.RecordType.Name = &#39;BMSA&#39;, VALUE(TEXT(Payment_Terms_Code__c)) &gt; VALUE(TEXT(Payment_Term__r.Maximum_Payment_Terms__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Payment Terms Higher</label>
    <type>Checkbox</type>
</CustomField>