force-app/main/default/objects/Invoice_Template__c/fields/Maximum_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Payment_Terms__c</fullName>
    <label>Maximum Payment Terms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>