force-app/main/default/objects/Invoice_Template__c/fields/Own_Inventory_Fee_Model__c.field-meta.xml
<CustomField>
    <fullName>Own_Inventory_Fee_Model__c</fullName>
    <label>Own Inventory Fee Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>File_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fixed CPM</fullName>
            </value>
            <value>
                <fullName>Fixed CPM + % of Spend</fullName>
            </value>
            <value>
                <fullName>% of Spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>