force-app/main/default/objects/Invoice_Template__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Invoice Templates</relationshipLabel>
    <relationshipName>Invoice_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>