force-app/main/default/objects/Invoice_Template__c/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <label>Payment Terms Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>L0</fullName>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L10</fullName>
            </value>
            <value>
                <fullName>L15</fullName>
            </value>
            <value>
                <fullName>L20</fullName>
            </value>
            <value>
                <fullName>L25</fullName>
            </value>
            <value>
                <fullName>L30</fullName>
            </value>
            <value>
                <fullName>L60</fullName>
            </value>
            <value>
                <fullName>L90</fullName>
            </value>
            <value>
                <fullName>M0</fullName>
            </value>
            <value>
                <fullName>M10</fullName>
            </value>
            <value>
                <fullName>M105</fullName>
            </value>
            <value>
                <fullName>M11</fullName>
            </value>
            <value>
                <fullName>M120</fullName>
            </value>
            <value>
                <fullName>M13</fullName>
            </value>
            <value>
                <fullName>M14</fullName>
            </value>
            <value>
                <fullName>M15</fullName>
            </value>
            <value>
                <fullName>M18</fullName>
            </value>
            <value>
                <fullName>M20</fullName>
            </value>
            <value>
                <fullName>M21</fullName>
            </value>
            <value>
                <fullName>M22</fullName>
            </value>
            <value>
                <fullName>M25</fullName>
            </value>
            <value>
                <fullName>M28</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M30</fullName>
            </value>
            <value>
                <fullName>M33</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>