force-app/main/default/objects/Invoice_Template__c/fields/Payment_Terms_Code_For_Automation__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code_For_Automation__c</fullName>
    <formula>IF(
  OR(
    CONTAINS(TEXT(Payment_Terms_Code__c), &#39;M&#39;),
    CONTAINS(TEXT(Payment_Terms_Code__c), &#39;L&#39;),
    ISBLANK(TEXT(Payment_Terms_Code__c))
  ),
  TEXT(Payment_Terms_Code__c), 
  &#39;M&#39; + TEXT(Payment_Terms_Code__c)
)</formula>
    <label>Payment Terms Code For Automation</label>
    <type>Text</type>
</CustomField>