force-app/main/default/objects/Invoice_Template__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>File_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Activity Based</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Net Amount</fullName>
            </value>
            <value>
                <fullName>Pure media + Data</fullName>
            </value>
            <value>
                <fullName>Gross Platform Spend</fullName>
            </value>
            <value>
                <fullName>Pure Media</fullName>
            </value>
            <value>
                <fullName>Net Amount + RTB</fullName>
            </value>
            <value>
                <fullName>Net Amount + RTB - TPB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>