force-app/main/default/objects/Invoice_Template__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>Invoice Templates</relationshipLabel>
    <relationshipName>Invoice_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>