force-app/main/default/objects/Invoice_Template__c/fields/RTB_Cost_Split__c.field-meta.xml
<CustomField>
    <fullName>RTB_Cost_Split__c</fullName>
    <label>RTB Cost Split</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>File_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Show Included fee</fullName>
            </value>
            <value>
                <fullName>Show Included fee and Trading Desk fee</fullName>
            </value>
            <value>
                <fullName>Show all costs and fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>