force-app/main/default/objects/Invoice_Template__c/fields/Trading_Desk_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trading_Desk_Fee__c</fullName>
    <label>Trading Desk Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>100% TDF1</fullName>
            </value>
            <value>
                <fullName>100% negative</fullName>
            </value>
            <value>
                <fullName>50% negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>