force-app/main/default/objects/Invoice_Template__c/validationRules/Only_Maximum_Can_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Maximum_Can_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(File_Type__c, &#39;Creative service&#39;),  NOT(ISPICKVAL(Invoice_Details__c, &#39;Maximum (campaign level)&#39;)))</errorConditionFormula>
    <errorDisplayField>Invoice_Details__c</errorDisplayField>
    <errorMessage>Only Maximum (campaign level) can be selected for Creative service</errorMessage>
</ValidationRule>