force-app/main/default/objects/Invoice_Template__c/validationRules/Only_Minimum_Can_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Minimum_Can_be_selected</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(File_Type__c, &#39;Minimum Fee&#39;),
NOT(ISPICKVAL(Invoice_Details__c, &#39;Minimal (agency level)&#39;))
)</errorConditionFormula>
    <errorDisplayField>Invoice_Details__c</errorDisplayField>
    <errorMessage>Only Minimal (agency level) can be selected for Minimum Fee</errorMessage>
</ValidationRule>